# GrowthTrack

./: .dockerignore  .env.example  .gitattributes  .gitignore  GrowthTrack_SRS_v1.md  GrowthTrack_SRS_v2.md  README.md  USER_GUIDE.md  config.py  pyproject.toml
.github/workflows/: ci.yml
_bmad/: config.toml  config.user.toml
_bmad-output/implementation-artifacts/: 1-0-project-scaffolding-deployment-foundation.md  1-1-administrator-login-session.md  1-2-first-run-administrator-bootstrap.md  1-3-role-scoped-portal-access-last-admin-guard.md  1-4-session-invalidation-logout-revocation.md  1-5-login-lockout-password-reset.md  1-6-design-system-foundation-shared-interaction-patterns.md  2-1-nightly-sales-reference-data-ingestion.md  2-2-dashboard-summary-view.md  2-3-brand-performance-analytics.md  2-4-prioritized-doctor-visit-list.md  3-1-manage-users-sales-teams.md  3-2-manage-recipient-groups-channels.md  3-3-recipient-opt-in-consent-capture.md  3-4-concurrent-edit-conflict-detection.md  4-1-compose-send-manual-notification.md  4-2-automated-daily-report-generation-send.md  4-3-delivery-status-webhook-automatic-retry.md  4-4-daily-report-schedule-configuration.md  4-5-manage-message-templates.md  deferred-work.md  sprint-status.yaml
_bmad-output/planning-artifacts/: epics.md  implementation-readiness-report-2026-07-14.md  sprint-change-proposal-2026-07-22.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
adapters/persistence/: __init__.py  advisory_locks.py  audit_log.py  brand_performance.py  consent.py  database.py  doctors.py  import_runs.py  notifications.py  password_reset.py  recipient_lists.py  sales_data.py  sessions.py  settings.py  staging.py  teams.py  users.py
adapters/source_system/: csv_importer.py
adapters/whatsapp_twilio/: sender.py  webhook_verifier.py
alembic/: env.py
alembic/versions/: 148ed4841d0f_notification_delivery_content_variables.py  17eb25555c26_recipients_directory_active_only_.py  1dfe4d12bdee_opt_in_consents.py  2f399b8b1526_notifications_created_by_nullable.py  3066ace65d15_baseline.py  7d3e9c2a5f81_report_schedule.py  8ae7e5d0d8c9_login_lockout_and_password_reset.py  976cabf50f32_recipient_lists_and_membership.py  98ddc369b175_user_and_audit_log_entities.py  a2fafc72668b_revoked_tokens.py  b3f7a1c9d2e4_message_templates_name_unique.py  (+4 more)
api/: main.py
api/auth/: routes.py  (+2 more)
docker/: backend.Dockerfile  docker-compose.yml  nginx.Dockerfile
domain/: administrators.py  auth.py  bootstrap.py  daily_report.py  ingestion.py  metrics.py  models.py  notifications.py  password_reset.py  preferences.py  recipients.py  report_formatting.py  report_schedule.py  scheduled_notifications.py  sessions.py
ports/: audit.py  auth.py  brand_performance.py  consent.py  doctors.py  import_runs.py  notifications.py  password_reset.py  recipient_lists.py  sales_data.py  sessions.py  settings.py  source_system.py  staging.py  teams.py  users.py  whatsapp.py
scheduler/: main.py
scripts/: seed_demo_data.py
tests/: conftest.py  test_health.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+149 files in other folders)
